# tic-tac-toe

./: .gitignore  README.md  bun.lockb  package.json
client/: bun.lockb  eslint.config.js  notes.md  package.json
client/src/: main.tsx  routeTree.gen.ts  types.ts
client/src/components/: Cursor.tsx  board.tsx  copy.tsx  game.tsx  unit.tsx
client/src/context/: gameProvider.tsx  gameState.tsx  level.tsx  provider.tsx  select-handler.tsx  socket.tsx  track.tsx
client/src/hooks/: gameStateByLevel.ts  level.ts  select-handler.ts  socket.ts  webrtc.ts  webrtc.ts.bak
client/src/lib/: constants.ts  gameLogic.ts  utils.ts
client/src/routes/: __root.tsx  game.$id.lazy.tsx  index.tsx
server/: Cargo.toml
server/src/: main.rs
