[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = "0.14"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"]}
